--- a/llvm/opt/README
+++ b/llvm/opt/README
@@ -1,3 +1,9 @@
+Before building ThreadSanitizer.so consider installing LLVM and llvm-gcc.
+
+On Ubuntu Lucid Lynx it's enough to run:
 
 sudo apt-get install llvm-dev
 sudo apt-get install llvm-gcc
+
+On other systems you may need to install other packages or build LLVM (>=2.7)
+and llvm-gcc (>=4.2) from source tarballs
